k8/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: bankapp
  labels:
    app: mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate    
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0 
          ports:
            - containerPort: 3306

          resources:
             requests: 
               memory: "256Mi"
               cpu: "250m"
             limits:
               memory: "512Mi"
               cpu: "500m"  

          volumeMounts:
             - name: mysql-storafe
               mountPath: /var/lib/mysql

          readinessProbe:  #pod is ready to take traffic if not k8 will remove from service endpoint 
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 15
            failureThreshold: 10 

          livenessProbe:   #check whether the pod is live if not live k8 will restart the container
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
